feat: add first c malloc demo

--- a/cmalloc-demo/CMakeLists.txt
+++ b/cmalloc-demo/CMakeLists.txt
@@ -2,4 +2,9 @@ cmake_minimum_required(VERSION 3.17)
 
 project(cmalloc-demo)
 
-add_executable(cmalloc-demo demo.c)
+set(_SRCS
+        src/utf_string.h
+        src/utf_string.c
+        src/main.c)
+
+add_executable(cmalloc-demo ${_SRCS})
